# mjp-comparator

./: .gitignore  README.md  call_cmake.sh
data/: 20141117_2230_MJP_custom.csv  20141117_2230_MJP_foxbeleid.csv  20141120_0330_MJP_custom.csv  20141120_0330_MJP_custom.xlsx  20141120_0330_MJP_foxbeleid.xlsx  20151111_1055_MJP_custom_exploitatie-ontvangsten_v3.csv  20151111_1055_MJP_foxbeleid.csv  20151114_1056_MJP_exploitatie-ontvangsten_v6.csv  20151114_1056_MJP_exploitatie-uitgaven_v7.csv  20151114_1056_MJP_investeringen-uitgaven_v7.csv  20151114_1056_MJP_liquiditeiten-uitgaven+ontvangsten_v4.csv  20151114_1500_MJP_foxbeleid.csv  20160817_Budgetwijziging_Ontvangsten.csv  20160817_Budgetwijziging_Uitgaven.csv  clean_data.sh  convert_data.sh
data/2014/: 20141117_2230_MJP_custom.csv  20141120_0330_MJP_custom.xlsx  20141120_0330_MJP_foxbeleid.csv  MJP 2014-2019_aangepastIB 2015.csv  MJP uit foxbeleid.csv
data/2015/: 20151114_1056_MJP_foxbeleid.csv  20151114_1056_MJP_investeringen-ontvangsten_v5.csv  20151117_2046_MJP_exploitatie-ontvangsten_v6.csv  20151117_2046_MJP_exploitatie-uitgaven_v7.csv  20151117_2046_MJP_foxbeleid.csv  20151117_2046_MJP_investeringen-ontvangsten_v5.csv  20151117_2046_MJP_investeringen-uitgaven_v7.csv  20151117_2046_MJP_liquiditeiten-uitgaven+ontvangsten_v5.csv
data/2016/budget-change/: 20160817_0740_BW1-2016_foxbeleid.csv
data/2016/mjp/: 20161120_exploitatie-ontvangsten_v2.csv  20161120_exploitatie-uitgaven_62_(personeel)_v2.csv  20161120_exploitatie-uitgaven_v3.csv  20161120_foxbeleid_20-11-2016_10u45.csv  20161120_investerings-ontvangsten_v2.csv  20161120_investerings-uitgaven_v3.csv  20161120_liquiditeiten.csv  exploitatie-ontvangsten_v2.csv  exploitatie-uitgaven_62_(personeel)_v2.csv  exploitatie-uitgaven_v3.csv  foxbeleid_20-11-2016_22u45.csv  foxbeleid_23-11-2016_21u51.csv  investerings-ontvangsten_v2.csv  investerings-uitgaven_v3.csv  liquiditeiten.csv
data/2018/budget-change/: exploitatie-ontvangsten_IB2019_v5.csv  exploitatie-uitgaven_IB2019_v5.csv  investerings-ontvangsten_IB2019_v2.csv  investerings-uitgaven_IB2019_v4.csv  liquiditeiten_IB2019_v1.csv  liquiditeiten_IB2019_v2.csv  lonen_-_aanpassingen_tov_loonbudget_schaubroeck.csv
data/2018/mjp/: foxbeleid_19-11-2018_19u24.csv  foxbeleid_21-11-2018_21u59.csv  foxbeleid_22-11-2018_13u16.csv  foxbeleid_latest.csv
project/: .project  CMakeLists.txt
project/lib/: CMakeLists.txt  FileUtilities.cpp  FileUtilities.hpp  MJPEntry.cpp  MJPEntry.hpp  MJPEntryKey.cpp  MJPEntryKey.hpp  MJPFile.cpp  MJPFile.hpp  MJPFileComparator.cpp  MJPFileComparator.h
project/src/: CMakeLists.txt  main.cpp
project/test/: CMakeLists.txt  MJPEntryKeyTest.cpp  MJPEntryTest.cpp  MJPFileTest.cpp  testMain.cpp
